[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wenv"
authors = [{name = "Sebastian M. Ernst", email = "ernst@pleiszenburg.de"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/pleiszenburg/wenv"

[tool.black]
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.cache
  | \.hypothesis
  | \.ipynb_checkpoints
  | \.pytest_cache
  | .ropenproject
  | _build
  | build
  | buck-out
  | demo_dll
  | dist
  | env[0-9]{2}
  | env
)/
'''

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.paths]
source = '''
    src/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
