[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wenv"
description = "Running Python on Wine"
authors = [{name = "Sebastian M. Ernst", email = "ernst@pleiszenburg.de"}]
maintainers = [{name = "Sebastian M. Ernst", email = "ernst@pleiszenburg.de"}]
keywords = ["wine", "cross platform"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Operating System",
    "Topic :: System :: Operating System Kernels",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.scripts]
wenv = "wenv:cli"
_wenv_python = "wenv:shebang"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "coverage[toml]",
    "pytest-cov",
    "python-lsp-server[all]",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "typeguard",
    "myst-parser",
    "twine",
]

[project.urls]
Home = "https://github.com/pleiszenburg/wenv"
Documentation = "https://wenv.readthedocs.io/en/latest/"
Source = "https://github.com/pleiszenburg/wenv"

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.cache
  | \.hypothesis
  | \.ipynb_checkpoints
  | \.pytest_cache
  | .ropenproject
  | _build
  | build
  | buck-out
  | demo_dll
  | dist
  | env[0-9]{2}
  | env
)/
'''

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.paths]
source = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
